--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
           </div>
           <div class="links">
             <ul class="grid">
-              <li><i class="icon-mail"></i> contato@beautysalon.com</li>
+              <li><i class="icon-mail"></i> contato@contato.com</li>
             </ul>
           </div>
         </div>
