--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </ul>
         </div>
         <div class="toggle icon-menu"></div>
-        <div class="toggle icon-close"></div>
+        <div class="toggle icon-x"></div>
       </nav>
     </header>
     <main>
